log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:26:04 PM UTC: 
 tests:  0|6
total_score: 0/70
57c80fe
Thu 30 Mar 2023 03:27:37 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:29: error: expected expression before ‘ArrayList’
   15 |   ArrayList* nuevaLista = (*ArrayList) calloc(1, sizeof(ArrayList));
      |                             ^~~~~~~~~
arraylist.c:15:40: error: expected ‘,’ or ‘;’ before ‘calloc’
   15 |   ArrayList* nuevaLista = (*ArrayList) calloc(1, sizeof(ArrayList));
      |                                        ^~~~~~
Compilation failed
e74b3d6
Thu 30 Mar 2023 03:27:55 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ec7a0d9
Thu 30 Mar 2023 03:28:30 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:22: error: expected expression before ‘void’
   16 |   nuevaLista->data = void;
      |                      ^~~~
Compilation failed
c7ed1a8
Thu 30 Mar 2023 03:29:47 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b194326
Thu 30 Mar 2023 03:31:18 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
184c89c
Thu 30 Mar 2023 03:31:32 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
44c12ec
Thu 30 Mar 2023 03:32:23 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
75c8562
Thu 30 Mar 2023 03:33:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:6: error: expected identifier before ‘*’ token
   25 |   l->*(data+l->size) = data;
      |      ^
Compilation failed
37e1562
Thu 30 Mar 2023 03:33:46 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:19: error: lvalue required as left operand of assignment
   25 |   l->data+l->size = data;
      |                   ^
Compilation failed
a2e295e
Thu 30 Mar 2023 03:34:49 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:6: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   25 |   if(size==capacity) l->data = realloc(data, 2*l->size);
      |      ^~~~
      |      dysize
arraylist.c:25:6: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:25:12: error: ‘capacity’ undeclared (first use in this function)
   25 |   if(size==capacity) l->data = realloc(data, 2*l->size);
      |            ^~~~~~~~
arraylist.c:26:19: error: lvalue required as left operand of assignment
   26 |   l->data+l->size = data;
      |                   ^
Compilation failed
caacfee
